--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "package": "ovsx package",
-    "publish": "ovsx publish"
+    "publish": "ovsx publish",
+    "release": "npm version patch && git push origin main --tags"
   },
   "configurationDefaults": {
     "[geant4-tg]": {
