--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "package": "vsce package",
     "deploy": "ovsx publish",
-    "release": "npm version patch && git push origin main --tags",
+    "release": "npm version patch && git push origin HEAD --follow-tags",
     "format": "prettier --write .",
     "prepare": "husky"
   },
